Added new videos and font coffee+tea
* Added new videos to videography_portfolio
* Added new font coffeeTeaReg.ttf
* Added index_samaddingtonmedia.com_2023-02-06.html as an archive of my original index/home page. I changed it so that my homepage for now would come up to the same thing as my  videography portfolio while I have the application submitted to the companies I sent it too. I will go back to the archive version when I start promoting weddings again.

--- a/style.css
+++ b/style.css
@@ -44,13 +44,19 @@ img
 @font-face
 {
     font-family: Belicimo;
-    src: url('fonts/Belicimo.ttf');
+    src: url('fonts/Belicimo.ttf')
+        format('truetype');
     
     font-family: TheBeard;
     src: url('fonts/The Beard.otf');
     
     font-family: Hermona;
-    src: url('fonts/Hermona.ttf');
+    src: url('fonts/Hermona.ttf')
+        format('truetype');
+    
+    font-family: coffeeTeaReg;
+        src: url('fonts/coffeeTeaReg.ttf')
+        format('truetype');
 }
 
 
