--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header
 nav
 {
     padding-top: 4%;
-    padding-bottom: 4%;
+    padding-bottom: 10%;
 }
 
 nav li
@@ -80,7 +80,7 @@ nav li
     list-style-type: none;
     display: inline;
     position: relative;
-    padding: 0 5% 0 5%
+    padding: 0 5% 0 5%;
 }
 
 nav .currentPage
